--- a/index.html
+++ b/index.html
@@ -3,23 +3,56 @@
         <title>
             Demo
         </title>
+        <script>
+            window.addEventListener("load", function(e) {
+                var animateTextNode = Array.prototype.slice.call(document.getElementsByClassName("animate-text"));
+                var countTextToAnimate = 0;
+                animateTextNode.forEach(function(node) {
+                    var animateText = node.innerText.split("");
+                    node.innerText = "";
+                    animateText.forEach(function(el, index){
+                    var spanText = document.createElement("SPAN");
+                    spanText.innerText = el;
+                    node.appendChild(spanText);
+                    setTimeout(function(){
+                    spanText.className = "animate";
+                    countTextToAnimate += 1;
+                    spanText.style.transitionDuration = (.5 + 0.2 * countTextToAnimate) + "s";
+                    }, 0)
+                    });  
+
+                });
+           })
+        </script>
         <style>
             body {
                 margin: 0px;
+            }
+            .animate-text span  {
+                display: inline-block;
+                transform: translateY(50px);
+            }
+
+            .animate-text span.animate {
+                transform: translateY(0px);
+            }
+            .animate-text {
+                display: inline-block;
             }
             .coming-soon {
                 text-align: center;
                 width: 100%;
                 position: absolute;
-                top:40%;
+                top: 40%;
                 font-size: 44px;
-                color: #156565; 
+                color: #156565;
             }
         </style>
     </head>
     <body>
         <div class="coming-soon">
-            Coming Soon...
+            <div class="animate-text">Coming</div>
+            <div class="animate-text">Soon...</div>
         </div>
     </body>
 </html>
