Updated project link

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
             <div class="animate-text">Under Development...</div>
             <br/>
             <div class="caption">
-                Meanwhile, you can check out my small project to <strong>Compare NPM Download Stats</strong> over <a href="./compare-npm-download-stats/index.html">here</a>
+                Meanwhile, you can check out my small project to <strong>Compare NPM Download Stats</strong> over <a href="./compare-npm-download-stats/">here</a>
             </div>
         </div>
 
