Updated the responsive styling for container.

--- a/compare-npm-download-stats/index.html
+++ b/compare-npm-download-stats/index.html
@@ -50,7 +50,7 @@
             <div id="package-to-track" class="d-flex w-100 justify-content-start align-items-center align-content-start mb-2"></div>
         </div>
         
-        <div class="p-5 shadow-lg w-50 position-relative">
+        <div class="p-5 shadow-lg position-relative" id="container">
             <div class="position-absolute visible-options" role="group" aria-label="Hiding & Showing DataSeries" style="top: 10px;z-index: 1;right: 20px;">
                 <button id="hideAllSeries" type="button" class="btn btn-outline-secondary">Hide All</button>
                 <button id="showAllSeries" type="button" class="btn btn-outline-info active">Show All</button>
