1. Added message to be shown when there is no package stats to be shown. 2. Modified text used for submission of form.

--- a/compare-npm-download-stats/index.html
+++ b/compare-npm-download-stats/index.html
@@ -40,8 +40,8 @@
                     </div>
                 </div>
                 <div class="col-md">
-                    <button class="btn btn-outline-primary btn-lg h-100" type="submit">
-                        Submit
+                    <button class="btn btn-outline-primary btn-lg h-100 w-100" type="submit">
+                        Add Package
                     </button>
                 </div>
             </div>
@@ -52,8 +52,8 @@
         
         <div class="p-5 shadow-lg position-relative" id="container">
             <div class="position-absolute visible-options" role="group" aria-label="Hiding & Showing DataSeries" style="top: 10px;z-index: 1;right: 20px;">
-                <button id="hideAllSeries" type="button" class="btn btn-outline-secondary">Hide All</button>
-                <button id="showAllSeries" type="button" class="btn btn-outline-info active">Show All</button>
+                <button id="hideAllSeries" type="button" class="btn btn-outline-secondary opacity-0">Hide All</button>
+                <button id="showAllSeries" type="button" class="btn btn-outline-info active opacity-0">Show All</button>
             </div>
             <div id="chartContainer" class="overflow-hidden mt-2" style="height: 400px; margin: auto;">
             </div>
