--- a/compare-npm-download-stats/index.html
+++ b/compare-npm-download-stats/index.html
@@ -42,7 +42,7 @@
             <div class="d-flex visible-options mr-5 ml-auto" role="group" aria-label="Hiding & Showing DataSeries">
                 <button id="toggleSeriesVisibility" type="button" class="btn btn-sm btn-outline-secondary ml-auto rounded-5"><i class="bi bi-eye-fill"></i></button>
             </div>
-            <div class="d-flex justify-content-between range-selector mt-3">
+            <div class="d-flex justify-content-between range-selector mt-3 flex-wrap">
                 <div class="rounded p-2 w-auto range-buttons">
                     <button class="btn btn-sm btn-outline-secondary active" data-range="1">
                         1M
@@ -54,7 +54,7 @@
                         1Y
                     </button>
                 </div>
-                <div class="p-2 w-auto data-group bg-gradient rounded d-flex align-items-center range-selector">
+                <div class="p-2 w-auto data-group bg-gradient rounded d-flex align-items-center range-selector ml-auto">
                     <span>From</span>
                     <input type="text" name="start-date" id="start-date" class="datepicker form-control mx-2 py-0 d-inline-block" />
                     <span>To</span>
