--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
             I'm a Senior Software Developer at CanvasJS, with over 8 years of experience crafting innovative web solutions that bridge technology and user needs. I specialize in data visualization, seamlessly integrating CanvasJS charts into modern frameworks like React and Angular to create dynamic, user-friendly experiences. My expertise extends to full-stack development, where I've built custom WordPress plugins, designed robust APIs, and implemented efficient server management solutions.
           </p>
           <p class="text-lg mb-4">
-            Driven by a passion for problem-solving, I thrive on turning complex challenges into elegant, scalable solutions. Beyond coding, I’m a knowledge-sharer at heart—my technical blogs on dev.to and Medium reflect my commitment to helping others grow in the ever-evolving tech landscape.
+            Driven by a passion for problem-solving, I thrive on turning complex challenges into elegant, scalable solutions. Beyond coding, I share my knowledge with technical blogs on dev.to and Medium reflect my commitment to helping others grow in the ever-evolving tech landscape.
           </p>
           <div class="flex space-x-4 mt-6">
             <a href="https://github.com/manojmohangit" target="_blank" class="social-btn github">
